@@ -1,5 +1,5 @@
 # Editor release-wide properties
-editor.release.number=1.4.6_20070613
+editor.release.number=1.4.6_20070615
 editor.contributors=Lindsay Bradford, Moe Wynn
 compatible.engine.release.number=Beta 8.2
 compatible.engine.jar.name=YAWLBeta8.2_Standalone.jar
