@@ -17,6 +17,8 @@ Version 1.4.6 (??/??/????)
   * Upgraded editor to use JGraph 5.9.2.2 and Proguard 3.8.
   * Enhanced the editor so it is now possible to change the ordering of task variables,
     net variales, and task parameter queries.
+  * Fixed a bug where cancelling a save-as action on a specification was being ignored,
+    and the file being saved regardless.
 
 Version 1.4.5 (27/04/2007) "Blobby"
   * The editor has been upgraded to now use Engine Beta 8.2.
